--- a/css/stencilmanage.css
+++ b/css/stencilmanage.css
@@ -159,13 +159,13 @@
 }
 .demand_remark{
     position: absolute;
-    bottom: -28px;
-    left: 0px;
-    background:#fff;
-    display: none;
-    z-index: 999;
+    top: 190px;
+    left: -3px;
+    padding: 3px;
+    background: #fff;
     border: 1px solid #ccc;
     border-radius: 3px;
-    padding: 6px;
-    box-shadow: 0 0 13px 2px rgba(101,28,77,.2);
+    box-shadow: 0 0 14px 5px rgba(101,28,77,.1);
+    display: none;
+    padding: 10px;
 }
