--- a/css/form.css
+++ b/css/form.css
@@ -443,6 +443,9 @@ form p.error {
 	margin-top: -40px;
 	background-color:transparent;
 }
+.menu-top .menu-top-ul{
+	min-width: 880px;
+}
 .menu-top li {
 	float: left;
 }
@@ -451,12 +454,12 @@ form p.error {
 }
 .menu-top li a {
 	display: block;
-	width: 140px;
+	width: 130px;
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
 	font-size: 18px;
-	color: #FFFFFF;
+	color: #dfdfdf;
 	background: url(../images/menubg.png) no-repeat;
 	background-size: 100% 40px;
 }
@@ -2253,6 +2256,7 @@ div.f-addbtn-box-auto li{
 	position: absolute;
 	right: 353px;
 	top: 25px;
+	top: 10px;
 	width: 150px;
 	height: 25px;
 	background-color: #FFFFFF;
