修改BI，柱状图的X轴重叠问题

--- a/css/BI_d3.css
+++ b/css/BI_d3.css
@@ -1,52 +1,52 @@
 
-/*BI页面*/
-/*滚动条*/
-::-webkit-scrollbar-track{
-    border-radius:4px;
-}
-::-webkit-scrollbar-track-piece{
-    -webkit-border-radius:4px;
-}
-::-webkit-scrollbar-track-piece:hover{
+/*!*BI页面*!*/
+/*!*滚动条*!*/
+/*::-webkit-scrollbar-track{*/
+    /*border-radius:4px;*/
+/*}*/
+/*::-webkit-scrollbar-track-piece{*/
+    /*-webkit-border-radius:4px;*/
+/*}*/
+/*::-webkit-scrollbar-track-piece:hover{*/
 
-}
-::-webkit-scrollbar{
-    width:10px;
-    height:10px;
-    border-radius:0px;
-    background-color:#F1F1F1;
-}
-::-webkit-scrollbar:hover{
-    background:#DCE1E4;
-}
-::-webkit-scrollbar-thumb{
-    background-color:#C1C8CC;
-    border:solid 1px #B5BBBF;
-    border-radius:4px;
-}
-::-webkit-scrollbar-thumb:hover{
-    background-color:#6C7073;
-    border-color:#5F6366;
-}
-::-webkit-scrollbar-arrow {
-    color:#F00;
-    background:#0F0;
-}
-::-webkit-scrollbar-button{
-    display:block;
-    width:10px;
-    height:10px;
-    border-radius:4px;
-    border:1px solid #B5BBBF;
-    display:none;
-}
-::-webkit-scrollbar-button:hover{
-    border-color:#5F6366;
-}
-::-webkit-scrollbar-button:vertical:start:increment,
-::-webkit-scrollbar-button:vertical:end:decrement {
-    display:none;
-}
+/*}*/
+/*::-webkit-scrollbar{*/
+    /*width:10px;*/
+    /*height:10px;*/
+    /*border-radius:0px;*/
+    /*background-color:#F1F1F1;*/
+/*}*/
+/*::-webkit-scrollbar:hover{*/
+    /*background:#DCE1E4;*/
+/*}*/
+/*::-webkit-scrollbar-thumb{*/
+    /*background-color:#C1C8CC;*/
+    /*border:solid 1px #B5BBBF;*/
+    /*border-radius:4px;*/
+/*}*/
+/*::-webkit-scrollbar-thumb:hover{*/
+    /*background-color:#6C7073;*/
+    /*border-color:#5F6366;*/
+/*}*/
+/*::-webkit-scrollbar-arrow {*/
+    /*color:#F00;*/
+    /*background:#0F0;*/
+/*}*/
+/*::-webkit-scrollbar-button{*/
+    /*display:block;*/
+    /*width:10px;*/
+    /*height:10px;*/
+    /*border-radius:4px;*/
+    /*border:1px solid #B5BBBF;*/
+    /*display:none;*/
+/*}*/
+/*::-webkit-scrollbar-button:hover{*/
+    /*border-color:#5F6366;*/
+/*}*/
+/*::-webkit-scrollbar-button:vertical:start:increment,*/
+/*::-webkit-scrollbar-button:vertical:end:decrement {*/
+    /*display:none;*/
+/*}*/
 
 /*  堆叠柱状图   */
 .axis path,
@@ -362,3 +362,68 @@ table th,table td{
     fill: none;
 }
 /*  圆饼图 -- 结束 */
+
+.resize-item{
+    width: 95%;
+    height: 800px;
+    margin: 20px 2.5% 0;
+    border: 1px solid rgba(57,155,252,0.6);
+    position: absolute;
+    /*top: 200px;*/
+    /*left: 100px;*/
+    background-color:#fff;
+}
+.resize-item .positioning{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+.resize-item .positioning .inform{
+    border: 0 solid rgb(204, 204, 204);
+    background-color: rgb(255, 255, 255);
+    border-radius: 0;
+    opacity: 1;
+    height: 100%;
+}
+.resize-item .positioning .inform .chartTitle{
+    line-height: 1em;
+    background: rgba(255, 255, 255, 0);
+    font-family: "Microsoft YaHei", sans-serif;
+    font-size: 16px;
+    color: rgb(0, 0, 0);
+    text-align: left;
+    padding: 20px 20px 10px;
+    position: relative;
+}
+.resize-item .positioning .inform .resize-content{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    right: 20px;
+    top: 66px;
+}
+.resize-item .positioning .inform .resize-content .resize-chart{
+    width: 100%;
+    height: 100%;
+}
+.resize-item .mask-layer{
+    position: absolute;  top: 0;  left: 0;  right: 0;  bottom: 0;
+    z-index: 100;
+
+}
+/*  信息显示框 */
+.message{
+    border: 1px solid #8b8b8b;
+    padding: 5px 10px;
+    line-height: 22px;
+    font-size: 12px;
+    color: #a6a6a6;
+    background: #fff;
+    height: fit-content;
+    position: absolute;
+    display: none;
+    bottom: 200px;
+    left: 200px;
+}
