--- a/css/gooflow/GooFlow.css
+++ b/css/gooflow/GooFlow.css
@@ -319,3 +319,7 @@ v\:group,v\:rect,v\:imagedata,v\:oval,v\:line,v\:polyline,v\:stroke,v\:textbox {
     background: url(/../../images/execute.png) no-repeat center;
     background-size: 16px 18px;
 }
+.GooFlow .ico_waitFor{
+    background: url(/../../images/btn_zongshu.png) no-repeat center;
+    background-size: 16px 18px;
+}
